--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --no-include-email --region us-west-1)
+      #- $(aws ecr get-login --no-include-email --region us-west-1)
+      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 359524702761.dkr.ecr.eu-central-1.amazonaws.com
       - REPOSITORY_URI=359524702761.dkr.ecr.eu-central-1.amazonaws.com/ecs-locations
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
