--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,8 @@ phases:
       - REPOSITORY_URI=359524702761.dkr.ecr.eu-central-1.amazonaws.com/ecs-locations
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - CLUSTER_NAME=ecs-locations-fargate
+      - SERVICE_NAME=ecs-locations-service
   build:
     commands:
       - echo Build started on `date`
@@ -25,3 +27,6 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+  deployment:
+    commands:
+      - aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
